--- a/src/Soenneker.Quark.Enums.ObjectFits.csproj
+++ b/src/Soenneker.Quark.Enums.ObjectFits.csproj
@@ -16,7 +16,7 @@
         <AssemblyName>Soenneker.Quark.Enums.ObjectFits</AssemblyName>
         <PackageId>Soenneker.Quark.Enums.ObjectFits</PackageId>
         <PackageTags>quark enums objectfits css html enum objectfit csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
